fix: UserRepository.getUserLst가 불변객체를 반환하도록 변경